Updated .gitignore to ignore pdf and xwm files

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 *.cb
 *.cb2
 .*.lb
+*.xwm
 
 ## Intermediate documents:
 *.dvi
@@ -23,10 +24,10 @@
 # these rules might exclude image files for figures etc.
 # *.ps
 # *.eps
-# *.pdf
+*.pdf
 
 ## Generated if empty string is given at "Please type another file name for output:"
-.pdf
+# .pdf
 
 ## Bibliography auxiliary files (bibtex/biblatex/biber):
 *.bbl
