Add build scripts to build artifact

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ script:
  - cd . # nothing to do here
 before_deploy:
 - zip -r ${REPO_NAME}_${TRAVIS_TAG}-${TRAVIS_BUILD_NUMBER}.zip content template .devcontainer
-  .vscode .gitignore root.tex
+  .vscode .gitignore root.tex build.sh build.ps1
 deploy:
   provider: releases
   api_key:
