Enable chtex and intellisense

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,5 +52,7 @@
             "env": {}
         }
     ],
-    "latex-workshop.synctex.afterBuild.enabled": true
+    "latex-workshop.synctex.afterBuild.enabled": true,
+    "latex-workshop.intellisense.package.enabled": true,
+    "latex-workshop.chktex.enabled": true
 }
