--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,6 +45,7 @@
               "-synctex=1",
               "-interaction=nonstopmode",
               "-file-line-error",
+              "-shell-escape",
               "-pdf",
               "-pdflatex=lualatex",
               "-outdir=%OUTDIR%",
