ci(release): set up semantic-release
#75

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,14 +29,16 @@ jobs:
           root_file: starter-recommended.tex
           working_directory: ./examples/starter-recommended
           args: -pdf -latexoption=-file-line-error -latexoption=-interaction=nonstopmode -pdflatex=lualatex -latexoption=-shell-escape
-      - name: Collect artifacts
-        run: |
-          mkdir -p ./artifacts/examples
-          cp ./examples/full/full.pdf ./artifacts/examples/
-          cp ./examples/starter-advanced/starter-advanced.pdf ./artifacts/examples/
-          cp ./examples/starter-recommended/starter-recommended.pdf ./artifacts/examples/
-      - name: Upload build artifact
-        uses: actions/upload-artifact@master
+      - name: Setup Node.js for Release
+        if: github.ref == 'refs/heads/master'
+        uses: actions/setup-node@v1
         with:
-          name: artifact
-          path: ./artifacts
+          node-version: 12
+      - name: Install dependencies for Release
+        if: github.ref == 'refs/heads/master'
+        run: npm ci
+      - name: Release
+        if: github.ref == 'refs/heads/master'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: npx semantic-release
