perf: replace base docker image
replace base docker image with danteev/texlive

fix #71

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Arch Linux TexLive PlantUML udhbwvst",
+    "name": "danteev/texlive with udhbwvst preinstalled",
     "image": "skyfrk/udhbwvst:latest",
     "extensions": [
         "James-Yu.latex-workshop",
