--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -4,6 +4,7 @@
     "extensions": [
         "James-Yu.latex-workshop",
         "streetsidesoftware.code-spell-checker",
-        "streetsidesoftware.code-spell-checker-german"
+        "streetsidesoftware.code-spell-checker-german",
+        "jebbs.plantuml"
     ]
 }
