chore(devcontainer): add md extensions

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -5,6 +5,8 @@
         "James-Yu.latex-workshop",
         "streetsidesoftware.code-spell-checker",
         "streetsidesoftware.code-spell-checker-german",
-        "jebbs.plantuml"
+        "jebbs.plantuml",
+        "shd101wyy.markdown-preview-enhanced",
+        "yzhang.markdown-all-in-one"
     ]
 }
