ci: split test and release to separate workflows

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,33 +1,12 @@
-name: CI
+name: Release
 
 on:
   push:
-    paths-ignore:
-      - 'docs/**'
-      - '.vscode/**'
-      - '.gitignore'
-      - '.devcontainer.json'
-      - 'README.md'
-      - '*.ps1'
-      - '*.sh'
-      - 'CONTRIBUTING.md'
-      - 'LICENSE'
     branches:
-      - '!master'
-  pull_request:
-    paths-ignore:
-      - 'docs/**'
-      - '.vscode/**'
-      - '.gitignore'
-      - '.devcontainer.json'
-      - 'README.md'
-      - '*.ps1'
-      - '*.sh'
-      - 'CONTRIBUTING.md'
-      - 'LICENSE'
+      - 'master'
 
 jobs:
-  test:
+  release:
     runs-on: ubuntu-latest
     steps:
       - name: Clone repository
@@ -59,3 +38,15 @@ jobs:
         with:
           name: examples
           path: examples/**/*.pdf
+      - name: Setup node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12
+      - name: Install dependencies
+        run: npm ci
+      - name: Release to GitHub Releases
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: npx semantic-release
+
+      # Docker Hub will create a new release when a new tag is created.
