ci: use branches-ignore instead of '!'

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,8 @@ on:
       - '*.sh'
       - 'CONTRIBUTING.md'
       - 'LICENSE'
-    branches:
-      - '!master'
+    branches-ignore:
+      - master
   pull_request:
     paths-ignore:
       - 'docs/**'
