--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   release:
+    name: Run release procedure
     runs-on: ubuntu-18.04
     container:
       image: danteev/texlive:202006150204173dfee6
